SubBt/force-app/main/default/objects/Billable_Lines__c/Billable_Lines__c.object-meta.xml
<CustomObject>
    <description>Line Items for Invoice (AR)</description>
    <label>Invoice Line (AR)</label>
    <nameField>
        <displayFormat>IL-{000000}</displayFormat>
        <label>Item #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoice Lines (AR)</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>