SubBt/force-app/main/default/objects/Billable_Lines__c/fields/Asset_GL_Account__c.field-meta.xml
<CustomField>
    <fullName>Asset_GL_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Asset GL Account</label>
    <referenceTo>GL_Account__c</referenceTo>
    <relationshipName>Billable_Lines1</relationshipName>
    <type>Lookup</type>
</CustomField>