SubBt/force-app/main/default/objects/Billable_Lines__c/fields/Auto_Number1__c.field-meta.xml
<CustomField>
    <fullName>Auto_Number1__c</fullName>
    <label>#</label>
    <length>255</length>
    <type>Text</type>
</CustomField>