SubBt/force-app/main/default/objects/Billable_Lines__c/fields/Auto_Number__c.field-meta.xml
<CustomField>
    <fullName>Auto_Number__c</fullName>
    <displayFormat>BL - {000000}</displayFormat>
    <label>Auto Number</label>
    <type>AutoNumber</type>
</CustomField>