SubBt/force-app/main/default/objects/Billable_Lines__c/fields/Billings__c.field-meta.xml
<CustomField>
    <fullName>Billings__c</fullName>
    <label>Invoice (AR)</label>
    <referenceTo>Billings__c</referenceTo>
    <relationshipName>Billable_Lines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>