SubBt/force-app/main/default/objects/Billable_Lines__c/fields/Continuation_Sheet_G703__c.field-meta.xml
<CustomField>
    <fullName>Continuation_Sheet_G703__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Continuation Sheet  - G703</label>
    <referenceTo>SOV_Continuation_Sheet_Lines__c</referenceTo>
    <relationshipLabel>Invoice Lines (AR)</relationshipLabel>
    <relationshipName>Invoice_Lines_AR</relationshipName>
    <type>Lookup</type>
</CustomField>