SubBt/force-app/main/default/objects/Billable_Lines__c/fields/Inventory_GL_Account__c.field-meta.xml
<CustomField>
    <fullName>Inventory_GL_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inventory GL Account</label>
    <referenceTo>GL_Account__c</referenceTo>
    <relationshipName>Billable_Lines2</relationshipName>
    <type>Lookup</type>
</CustomField>