SubBt/force-app/main/default/objects/Billable_Lines__c/fields/Line_Title__c.field-meta.xml
<CustomField>
    <fullName>Line_Title__c</fullName>
    <label>Line Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>