SubBt/force-app/main/default/objects/Billable_Lines__c/fields/Quote_Line__c.field-meta.xml
<CustomField>
    <fullName>Quote_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote Line</label>
    <referenceTo>Quote_Item__c</referenceTo>
    <relationshipName>Invoice_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>