SubBt/force-app/main/default/objects/Billable_Lines__c/fields/Revenue_GL_Account__c.field-meta.xml
<CustomField>
    <fullName>Revenue_GL_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Revenue GL Account</label>
    <referenceTo>GL_Account__c</referenceTo>
    <relationshipName>Billable_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>